Aligning facet area heading text correctly

--- a/app/javascript/psulib_blacklight/styles/_facets.scss
+++ b/app/javascript/psulib_blacklight/styles/_facets.scss
@@ -40,7 +40,7 @@
 
 .facets-heading {
   @extend .h5;
-  margin: 0 0 0 15px;
+  margin: 0;
   line-height: inherit;
 }
 
